--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "buefy": "^0.9.22",
     "core-js": "^3.8.3",
+    "vue-router": "^2.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
