--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
     "@mdi/font": "^7.2.96",
-    "axios": "^1.2.2",
+    "@vue/cli-plugin-pwa": "^5.0.8",
+    "axios": "^1.4.0",
+    "core-js": "^3.8.3",
     "dayjs": "^1.11.7",
     "pinia": "^2.0.28",
+    "register-service-worker": "^1.7.2",
     "v3-infinite-loading": "^1.2.2",
+    "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.2.1"
   },
